--- a/Proyecto/Web.config
+++ b/Proyecto/Web.config
@@ -42,4 +42,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  
+ <connectionStrings>
+<clear />
+<add name="Conexion"
+            connectionString="Data Source=FAMILIA_RG\UNIVERSIDAD; Initial Catalog=MatricuWeb; Integrated Security=false;Connect Timeout=30;Application Name=Gemas;User ID=sa;Password=sprt0912*;"
+            providerName="System.Data.SqlClient" />
+</connectionStrings>
 </configuration>
